workout matrix-mult

--- a/notebooks/scratch_network.ipynb
+++ b/notebooks/scratch_network.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        " 1  1  1"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        " 1"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,26 +105,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sigmoid (generic function with 2 methods)"
+       "deriv (generic function with 1 method)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function sigmoid(x,deriv = false)\n",
-    "    if deriv == true\n",
-    "        return x*(1-x)\n",
-    "    end\n",
-    "    return 1/(1+exp(-x))\n",
+    "#function sigmoid(x,deriv = false)\n",
+    "#    if deriv == true\n",
+    "#        return x*(1-x)\n",
+    "#    end\n",
+    "#    return 1.0 /(1.0+exp(-x))\n",
+    "#end\n",
+    "\n",
+    "function sigmoid(z)\n",
+    "    return 1.0 ./(1.0 .+ exp(-z))\n",
+    "end\n",
+    "\n",
+    "function deriv(z)\n",
+    "    return z .*(1 .- z)\n",
     "end"
    ]
   },
@@ -137,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +194,7 @@
        " 0.9999546021312976    "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,9 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "    <script type=\"text/javascript\">\n",
+       "        requirejs([\"https://cdn.plot.ly/plotly-latest.min.js\"], function(p) {\n",
+       "            window.Plotly = p\n",
+       "        });\n",
+       "    </script>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -500,9 +521,9 @@
        "        <script src=\"https://cdn.plot.ly/plotly-latest.min.js\"></script>\n",
        "    </head>\n",
        "    <body>\n",
-       "            <div id=\"2785fa10-2f1c-489c-872b-e7d24c60381f\" style=\"width:600px;height:400px;\"></div>\n",
+       "            <div id=\"ec3aea9e-513c-4592-be54-47ba91d3c1b1\" style=\"width:600px;height:400px;\"></div>\n",
        "    <script>\n",
-       "    PLOT = document.getElementById('2785fa10-2f1c-489c-872b-e7d24c60381f');\n",
+       "    PLOT = document.getElementById('ec3aea9e-513c-4592-be54-47ba91d3c1b1');\n",
        "    Plotly.plot(PLOT, [\n",
        "    {\n",
        "        \"colorbar\": {\n",
@@ -790,7 +811,7 @@
        "</html>\n"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,120 +833,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1×4 Array{Float64,2}:\n",
-       " 0.771189  0.905133  -0.518144  -0.816969"
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "syn0 = randn(Float64, (3,4))\n",
-    "syn1 = randn(Float64, (1,4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-0.6340098062654494\n",
-      "0.08530227381764346\n"
-     ]
-    }
-   ],
-   "source": [
-    "using Statistics\n",
-    "println(mean(syn0))\n",
-    "println(mean(syn1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "DimensionMismatch",
-     "evalue": "DimensionMismatch(\"x and y are of different lengths!\")",
-     "output_type": "error",
-     "traceback": [
-      "DimensionMismatch(\"x and y are of different lengths!\")",
-      "",
-      "Stacktrace:",
-      " [1] dot(::Float64, ::Array{Float64,2}) at /buildworker/worker/package_linux32/build/usr/share/julia/stdlib/v1.0/LinearAlgebra/src/generic.jl:675",
-      " [2] top-level scope at ./In[192]:4"
-     ]
-    }
-   ],
-   "source": [
-    "for j in 1:1:100\n",
-    "    l0 = X\n",
-    "    l1 = sigmoid(dot(X, syn0))\n",
-    "    l2 = sigmoid(dot(l1,syn1))\n",
-    "    \n",
-    "    l2_error = y - l2\n",
-    "    \n",
-    "    l2_delta = l2_error * sigmoid(l2, true)\n",
-    "    l1_error = dot(l2_delta, transpose(l1_delta))\n",
-    "    l1_delta = l1_error * sigmoid(l1, true)\n",
-    "    \n",
-    "    syn1 += dot(transpose(l1), l2_delta)\n",
-    "    syn0 += dot(transpose(l0), l1_delta)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "DimensionMismatch",
-     "evalue": "DimensionMismatch(\"x and y are of different lengths!\")",
-     "output_type": "error",
-     "traceback": [
-      "DimensionMismatch(\"x and y are of different lengths!\")",
-      "",
-      "Stacktrace:",
-      " [1] dot(::Float64, ::Array{Float64,2}) at /buildworker/worker/package_linux32/build/usr/share/julia/stdlib/v1.0/LinearAlgebra/src/generic.jl:675",
-      " [2] top-level scope at In[202]:2"
-     ]
-    }
-   ],
-   "source": [
-    "l1 = dot(X, syn0)\n",
-    "dot(l1, syn1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "4×1 Array{Float64,2}:\n",
-       " -1.4380875352224136  \n",
-       " -1.47086552757095    \n",
-       "  0.059496918353470644\n",
-       "  1.1894287049634882  "
+       " -1.8965312440244264 \n",
+       "  0.05640196147934484\n",
+       "  1.0941324952943372 \n",
+       " -0.9608960192511639 "
       ]
      },
-     "execution_count": 199,
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#syn0 = randn(Float64, (3,4))\n",
+    "syn1 = randn(Float64, (4,1))\n",
+    "transpose(syn1)\n",
+    "syn1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.36705208167992637\n"
+     ]
+    }
+   ],
+   "source": [
+    "using Statistics\n",
+    "println(mean(syn0))\n",
+    "#println(mean(syn1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×1 Array{Float64,2}:\n",
+       "  0.13323647604317335\n",
+       " -2.8010253017962454 \n",
+       " -1.7068928065019082 "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transpose(X)*syn1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "DimensionMismatch",
+     "evalue": "DimensionMismatch(\"matrix A has dimensions (4,3), matrix B has dimensions (1,4)\")",
+     "output_type": "error",
+     "traceback": [
+      "DimensionMismatch(\"matrix A has dimensions (4,3), matrix B has dimensions (1,4)\")",
+      "",
+      "Stacktrace:",
+      " [1] _generic_matmatmul!(::Array{Float64,2}, ::Char, ::Char, ::Array{Int32,2}, ::Array{Float64,1}) at /buildworker/worker/package_linux32/build/usr/share/julia/stdlib/v1.0/LinearAlgebra/src/matmul.jl:591",
+      " [2] mul! at /buildworker/worker/package_linux32/build/usr/share/julia/stdlib/v1.0/LinearAlgebra/src/matmul.jl:584 [inlined]",
+      " [3] *(::Array{Int32,2}, ::Transpose{Float64,Array{Float64,1}}) at /buildworker/worker/package_linux32/build/usr/share/julia/stdlib/v1.0/LinearAlgebra/src/matmul.jl:142",
+      " [4] top-level scope at ./In[30]:3"
+     ]
+    }
+   ],
+   "source": [
+    "for j in 1:1:100\n",
+    "    l0 = X\n",
+    "    intermediate = X*transpose(syn1)\n",
+    "    l1 = sigmoid(X*transpose(syn1))\n",
+    "\n",
+    "    l1_error = y - l1\n",
+    "    l1_delta = l1_error * deriv(l1)\n",
+    "    \n",
+    "    syn1 += transpose(l0) * l1_delta\n",
+    "\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.35638 -0.0963541 0.199112 1.39467; 1.46921 0.616915 -1.01934 1.1958; 0.419512 -0.453383 -1.23302 0.555119]\n",
+      "[0 1 1; 0 1 1; 1 0 1; 1 1 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Array{Float64,2}:\n",
+       "  1.59378   2.65469    2.8538  \n",
+       "  0.176465  3.28193    2.26259 \n",
+       " -0.677896  0.521249  -0.711767"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "println(syn0)\n",
+    "println(X)\n",
+    "syn0*X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.88872 0.163532 -2.25235 1.75092; 1.88872 0.163532 -2.25235 1.75092; 1.77589 -0.549737 -1.0339 1.94978; 3.2451 0.0671782 -2.05324 3.14559]\n",
+      "[0.782376 0.781407 0.487463 4.87976; 3.59508 0.438646 0.487463 4.87976; 1.87593 0.603619 0.460235 3.4804; 2.76702 0.896918 1.14931 0.760158]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = X*syn0\n",
+    "println(l1)\n",
+    "println(sigmoid(l1))\n",
+    "#l2 = l1*syn1\n",
+    "#println(l2)\n",
+    "#println(sigmoid(l2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have an issue with our function - to my understanding the issue is that it doesn't work on arrays. Let's try ammending this function. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sigmoid (generic function with 2 methods)"
+      ]
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,17 +1017,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching exp(::Array{Int32,1})\nClosest candidates are:\n  exp(!Matched::Float16) at math.jl:1018\n  exp(!Matched::Complex{Float16}) at math.jl:1019\n  exp(!Matched::Missing) at math.jl:1070\n  ...",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching exp(::Array{Int32,1})\nClosest candidates are:\n  exp(!Matched::Float16) at math.jl:1018\n  exp(!Matched::Complex{Float16}) at math.jl:1019\n  exp(!Matched::Missing) at math.jl:1070\n  ...",
+      "",
+      "Stacktrace:",
+      " [1] sigmoid(::Array{Int32,1}) at ./In[28]:2",
+      " [2] top-level scope at In[34]:1"
+     ]
+    }
+   ],
+   "source": [
+    "sigmoid([0; 1; 1; 0])"
+   ]
   }
  ],
  "metadata": {
