figured out element-wise operations

--- a/notebooks/scratch_network.ipynb
+++ b/notebooks/scratch_network.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "deriv (generic function with 1 method)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
     "#end\n",
     "\n",
     "function sigmoid(z)\n",
-    "    return 1.0 ./(1.0 .+ exp(-z))\n",
+    "    return 1.0 ./(1.0 .+ exp(.-z))\n",
     "end\n",
     "\n",
     "function deriv(z)\n",
@@ -521,9 +521,9 @@
        "        <script src=\"https://cdn.plot.ly/plotly-latest.min.js\"></script>\n",
        "    </head>\n",
        "    <body>\n",
-       "            <div id=\"ec3aea9e-513c-4592-be54-47ba91d3c1b1\" style=\"width:600px;height:400px;\"></div>\n",
+       "            <div id=\"758ef05a-bff0-4da4-94f8-7161b35db3dc\" style=\"width:600px;height:400px;\"></div>\n",
        "    <script>\n",
-       "    PLOT = document.getElementById('ec3aea9e-513c-4592-be54-47ba91d3c1b1');\n",
+       "    PLOT = document.getElementById('758ef05a-bff0-4da4-94f8-7161b35db3dc');\n",
        "    Plotly.plot(PLOT, [\n",
        "    {\n",
        "        \"colorbar\": {\n",
@@ -833,208 +833,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4×1 Array{Float64,2}:\n",
-       " -1.8965312440244264 \n",
-       "  0.05640196147934484\n",
-       "  1.0941324952943372 \n",
-       " -0.9608960192511639 "
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#syn0 = randn(Float64, (3,4))\n",
-    "syn1 = randn(Float64, (4,1))\n",
-    "transpose(syn1)\n",
-    "syn1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.36705208167992637\n"
-     ]
-    }
-   ],
-   "source": [
-    "using Statistics\n",
-    "println(mean(syn0))\n",
-    "#println(mean(syn1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "3×1 Array{Float64,2}:\n",
-       "  0.13323647604317335\n",
-       " -2.8010253017962454 \n",
-       " -1.7068928065019082 "
+       " -1.2175140033466896 \n",
+       "  0.6639190654576367 \n",
+       "  0.18607079419065026"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transpose(X)*syn1"
+    "#syn0 = randn(Float64, (3,4))\n",
+    "syn1 = randn(Float64, (3,1))\n",
+    "transpose(syn1)\n",
+    "syn1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "DimensionMismatch",
-     "evalue": "DimensionMismatch(\"matrix A has dimensions (4,3), matrix B has dimensions (1,4)\")",
-     "output_type": "error",
-     "traceback": [
-      "DimensionMismatch(\"matrix A has dimensions (4,3), matrix B has dimensions (1,4)\")",
-      "",
-      "Stacktrace:",
-      " [1] _generic_matmatmul!(::Array{Float64,2}, ::Char, ::Char, ::Array{Int32,2}, ::Array{Float64,1}) at /buildworker/worker/package_linux32/build/usr/share/julia/stdlib/v1.0/LinearAlgebra/src/matmul.jl:591",
-      " [2] mul! at /buildworker/worker/package_linux32/build/usr/share/julia/stdlib/v1.0/LinearAlgebra/src/matmul.jl:584 [inlined]",
-      " [3] *(::Array{Int32,2}, ::Transpose{Float64,Array{Float64,1}}) at /buildworker/worker/package_linux32/build/usr/share/julia/stdlib/v1.0/LinearAlgebra/src/matmul.jl:142",
-      " [4] top-level scope at ./In[30]:3"
-     ]
-    }
-   ],
-   "source": [
-    "for j in 1:1:100\n",
-    "    l0 = X\n",
-    "    intermediate = X*transpose(syn1)\n",
-    "    l1 = sigmoid(X*transpose(syn1))\n",
-    "\n",
-    "    l1_error = y - l1\n",
-    "    l1_delta = l1_error * deriv(l1)\n",
-    "    \n",
-    "    syn1 += transpose(l0) * l1_delta\n",
-    "\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.35638 -0.0963541 0.199112 1.39467; 1.46921 0.616915 -1.01934 1.1958; 0.419512 -0.453383 -1.23302 0.555119]\n",
-      "[0 1 1; 0 1 1; 1 0 1; 1 1 1]\n"
+      "0.0377748916420669\n"
+     ]
+    }
+   ],
+   "source": [
+    "using Statistics\n",
+    "println(mean(syn1))\n",
+    "#println(mean(syn1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 3)"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3×3 Array{Float64,2}:\n",
-       "  1.59378   2.65469    2.8538  \n",
-       "  0.176465  3.28193    2.26259 \n",
-       " -0.677896  0.521249  -0.711767"
+       "4×3 Array{Int32,2}:\n",
+       " 0  1  1\n",
+       " 0  1  1\n",
+       " 1  0  1\n",
+       " 1  1  1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "println(syn0)\n",
-    "println(X)\n",
-    "syn0*X"
+    "print(size(X))\n",
+    "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×1 Array{Float64,2}:\n",
+       "  0.8499898596482869 \n",
+       "  0.8499898596482869 \n",
+       " -1.0314432091560393 \n",
+       " -0.36752414369840264"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example = X*syn1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7005650152994582"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigmoid(example[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×1 Array{Float64,2}:\n",
+       " 0.7005650152994582 \n",
+       " 0.7005650152994582 \n",
+       " 0.26280440365231117\n",
+       " 0.4091394109298443 "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sigmoid.(X*syn1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×1 Array{Float64,2}:\n",
+       " 0.20977367463792806\n",
+       " 0.20977367463792806\n",
+       " 0.19373824907326426\n",
+       " 0.2417443533538243 "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deriv(sigmoid.(X*syn1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.88872 0.163532 -2.25235 1.75092; 1.88872 0.163532 -2.25235 1.75092; 1.77589 -0.549737 -1.0339 1.94978; 3.2451 0.0671782 -2.05324 3.14559]\n",
-      "[0.782376 0.781407 0.487463 4.87976; 3.59508 0.438646 0.487463 4.87976; 1.87593 0.603619 0.460235 3.4804; 2.76702 0.896918 1.14931 0.760158]\n"
+      "[0.0344936; 0.0344936; 0.995205; 0.956299]"
      ]
     }
    ],
    "source": [
-    "l1 = X*syn0\n",
-    "println(l1)\n",
-    "println(sigmoid(l1))\n",
-    "#l2 = l1*syn1\n",
-    "#println(l2)\n",
-    "#println(sigmoid(l2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We have an issue with our function - to my understanding the issue is that it doesn't work on arrays. Let's try ammending this function. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sigmoid (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching exp(::Array{Int32,1})\nClosest candidates are:\n  exp(!Matched::Float16) at math.jl:1018\n  exp(!Matched::Complex{Float16}) at math.jl:1019\n  exp(!Matched::Missing) at math.jl:1070\n  ...",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching exp(::Array{Int32,1})\nClosest candidates are:\n  exp(!Matched::Float16) at math.jl:1018\n  exp(!Matched::Complex{Float16}) at math.jl:1019\n  exp(!Matched::Missing) at math.jl:1070\n  ...",
-      "",
-      "Stacktrace:",
-      " [1] sigmoid(::Array{Int32,1}) at ./In[28]:2",
-      " [2] top-level scope at In[34]:1"
-     ]
-    }
-   ],
-   "source": [
-    "sigmoid([0; 1; 1; 0])"
+    "for j in 1:1:100\n",
+    "    global l1\n",
+    "    l0 = X #l0 = (4,3)\n",
+    "    l1 = sigmoid.(X*syn1) #l1 = 4,1\n",
+    "    #println(l1)\n",
+    "    l1_error = y - l1 #l1_error = 4,\n",
+    "    #println(l1_error)\n",
+    "    l1_delta = l1_error .* deriv.(l1)\n",
+    "    #print(size(l1_delta))\n",
+    "    syn1 += transpose(l0) * l1_delta\n",
+    "end\n",
+    "print(l1)"
    ]
   }
  ],
